--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Homepage: https://github.com/openstack/oslo.context
 Package: python-oslo-context
 Architecture: all
 Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
+Provides: python-oslo.context
 Description: WSGI context helpers for OpenStack - Python 2.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
@@ -37,6 +38,7 @@ Description: WSGI context helpers for OpenStack - Python 2.x
 Package: python3-oslo-context
 Architecture: all
 Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
+Provides: python3-oslo.context
 Description: WSGI context helpers for OpenStack - Python 3.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
