--- a/debian/control
+++ b/debian/control
@@ -24,10 +24,12 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-oslo-context.g
 Vcs-Git: git://anonscm.debian.org/openstack/python-oslo-context.git
 Homepage: https://github.com/openstack/oslo.context
 
-Package: python-oslo-context
+Package: python-oslo.context
 Architecture: all
 Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
-Provides: python-oslo.context
+Provides: python-oslo-context
+Replaces: python-oslo.context (<< 0.1.0-2~)
+Breaks: python-oslo.context (<< 0.1.0-2~)
 Description: WSGI context helpers for OpenStack - Python 2.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
@@ -35,10 +37,12 @@ Description: WSGI context helpers for OpenStack - Python 2.x
  .
  This package contains the Python 2.x module.
 
-Package: python3-oslo-context
+Package: python3-oslo.context
 Architecture: all
 Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
-Provides: python3-oslo.context
+Provides: python3-oslo-context
+Replaces: python3-oslo.context (<< 0.1.0-2~)
+Breaks: python3-oslo.context (<< 0.1.0-2~)
 Description: WSGI context helpers for OpenStack - Python 3.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
