--- a/debian/control
+++ b/debian/control
@@ -26,7 +26,7 @@ Homepage: https://github.com/openstack/oslo.context
 
 Package: python-oslo.context
 Architecture: all
-Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
+Depends: python-babel (>= 1.3), python-pbr, ${misc:Depends}, ${python:Depends}
 Provides: python-oslo-context
 Replaces: python-oslo.context (<< 0.1.0-2~)
 Breaks: python-oslo.context (<< 0.1.0-2~)
@@ -39,7 +39,7 @@ Description: WSGI context helpers for OpenStack - Python 2.x
 
 Package: python3-oslo.context
 Architecture: all
-Depends: python-babel (>= 1.3), ${misc:Depends}, ${python:Depends}
+Depends: python-babel (>= 1.3), python3-pbr, ${misc:Depends}, ${python:Depends}
 Provides: python3-oslo-context
 Replaces: python3-oslo.context (<< 0.1.0-2~)
 Breaks: python3-oslo.context (<< 0.1.0-2~)
