--- a/debian/control
+++ b/debian/control
@@ -28,8 +28,8 @@ Package: python-oslo.context
 Architecture: all
 Depends: python-babel (>= 1.3), python-pbr, ${misc:Depends}, ${python:Depends}
 Provides: python-oslo-context
-Replaces: python-oslo.context (<< 0.1.0-2~)
-Breaks: python-oslo.context (<< 0.1.0-2~)
+Replaces: python-oslo-context (<< 0.1.0-2~)
+Breaks: python-oslo-context (<< 0.1.0-2~)
 Description: WSGI context helpers for OpenStack - Python 2.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
@@ -41,8 +41,8 @@ Package: python3-oslo.context
 Architecture: all
 Depends: python-babel (>= 1.3), python3-pbr, ${misc:Depends}, ${python:Depends}
 Provides: python3-oslo-context
-Replaces: python3-oslo.context (<< 0.1.0-2~)
-Breaks: python3-oslo.context (<< 0.1.0-2~)
+Replaces: python3-oslo-context (<< 0.1.0-2~)
+Breaks: python3-oslo-context (<< 0.1.0-2~)
 Description: WSGI context helpers for OpenStack - Python 3.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
