--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: python-oslo-context
+Source: python-oslo.context
 Section: python
 Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
@@ -24,8 +24,8 @@ Build-Depends-Indep: python-babel,
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-oslo-context.git;a=summary
-Vcs-Git: git://anonscm.debian.org/openstack/python-oslo-context.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-oslo.context.git;a=summary
+Vcs-Git: git://anonscm.debian.org/openstack/python-oslo.context.git
 Homepage: https://github.com/openstack/oslo.context
 
 Package: python-oslo.context
