--- a/debian/control
+++ b/debian/control
@@ -35,8 +35,8 @@ Depends: python-babel,
          ${misc:Depends},
          ${python:Depends},
 Provides: python-oslo-context,
-Replaces: python-oslo-context (<< 0.1.0-2~),
-Breaks: python-oslo-context (<< 0.1.0-2~),
+Replaces: python-oslo-context (<< 0.3.0-1~),
+Breaks: python-oslo-context (<< 0.3.0-1~),
 Description: WSGI context helpers for OpenStack - Python 2.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
@@ -51,8 +51,8 @@ Depends: python-babel,
          ${misc:Depends},
          ${python:Depends},
 Provides: python3-oslo-context,
-Replaces: python3-oslo-context (<< 0.1.0-2~),
-Breaks: python3-oslo-context (<< 0.1.0-2~),
+Replaces: python3-oslo-context (<< 0.3.0-1~),
+Breaks: python3-oslo-context (<< 0.3.0-1~),
 Description: WSGI context helpers for OpenStack - Python 3.x
  The Oslo context library has helpers to maintain useful information
  about a request context. The request context is usually populated
@@ -60,7 +60,7 @@ Description: WSGI context helpers for OpenStack - Python 3.x
  .
  This package contains the Python 3.x module.
 
-Package: python-oslo-context-doc
+Package: python-oslo.context-doc
 Section: doc
 Architecture: all
 Depends: ${misc:Depends},
@@ -71,3 +71,27 @@ Description: WSGI context helpers for OpenStack - doc
  in the WSGI pipeline and used by various modules such as logging.
  .
  This package contains the documentation.
+
+Package: python-oslo-context
+Section: oldlibs
+Architecture: all
+Depends: python-oslo.context,
+         ${misc:Depends},
+Description: transitional dummy package for python-oslo-context.
+ This transtional package is safe to remove.
+
+Package: python-oslo-context-doc
+Section: oldlibs
+Architecture: all
+Depends: python-oslo.context-doc,
+         ${misc:Depends},
+Description: transitional dummy package for python-oslo-context-doc.
+ This transtional package is safe to remove.
+
+Package: python3-oslo-context
+Section: oldlibs
+Architecture: all
+Depends: python3-oslo.context,
+         ${misc:Depends},
+Description: transitional dummy package for python3-oslo-context.
+ This transtional package is safe to remove.
