--- a/debian/control
+++ b/debian/control
@@ -8,19 +8,19 @@ Build-Depends: debhelper (>= 9~),
                dh-python,
                openstack-pkg-tools,
                python-all,
-               python-pbr,
+               python-pbr (>= 1.6),
                python-setuptools,
                python-sphinx,
                python3-all,
-               python3-pbr,
+               python3-pbr (>= 1.6),
                python3-setuptools,
 Build-Depends-Indep: python-babel,
                      python-coverage,
-                     python-hacking,
+                     python-hacking (>= 0.10.0),
                      python-oslosphinx (>= 2.5.0),
-                     python-oslotest (>= 1.5.1),
+                     python-oslotest (>= 1.10.0),
                      python3-babel,
-                     python3-oslotest (>= 1.5.1),
+                     python3-oslotest (>= 1.10.0),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
@@ -31,7 +31,7 @@ Homepage: https://github.com/openstack/oslo.context
 Package: python-oslo.context
 Architecture: all
 Depends: python-babel,
-         python-pbr,
+         python-pbr (>= 1.6),
          ${misc:Depends},
          ${python:Depends},
 Provides: python-oslo-context,
@@ -47,7 +47,7 @@ Description: WSGI context helpers for OpenStack - Python 2.x
 Package: python3-oslo.context
 Architecture: all
 Depends: python-babel,
-         python3-pbr,
+         python3-pbr (>= 1.6),
          ${misc:Depends},
          ${python:Depends},
 Provides: python3-oslo-context,
