--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,9 @@ Build-Depends-Indep: python-coverage,
                      python-hacking (>= 0.10.0),
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.10.0),
+                     python-positional (>= 1.1.1),
                      python3-oslotest (>= 1.10.0),
+                     python3-positional (>= 1.1.1),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.8
@@ -30,6 +32,7 @@ Homepage: https://github.com/openstack/oslo.context
 Package: python-oslo.context
 Architecture: all
 Depends: python-pbr (>= 1.8),
+         python-positional (>= 1.1.1),
          ${misc:Depends},
          ${python:Depends},
 Provides: python-oslo-context,
@@ -45,6 +48,7 @@ Description: WSGI context helpers for OpenStack - Python 2.x
 Package: python3-oslo.context
 Architecture: all
 Depends: python3-pbr (>= 1.8),
+         python3-positional (>= 1.1.1),
          ${misc:Depends},
          ${python:Depends},
 Provides: python3-oslo-context,
